reconf-nginx-4-redis.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ingress-nginx-controller
  namespace: ingress
spec:
  selector:
    matchLabels:
      name: ingress-nginx-controller
  template:
    metadata:
      labels:
        name: ingress-nginx-controller
    spec:
      tolerations:
      # this toleration is to have the daemonset runnable on master nodes
      # remove it if your masters can't run pods
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: nginx-ingress-microk8s
        image: k8s.gcr.io/ingress-nginx/controller:v0.41.2
        ports:
        - containerPort: 80
        - containerPort: 443
        - name: prxd-tcp-6379
          containerPort: 6379
          hostPort: 6379
          protocol: TCP
