redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: NodePort
  selector:
    app: redis
  ports:
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        imagePullPolicy: IfNotPresent
        image: localhost:32000/redis:5.0.4
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "0.1"
        volumeMounts:
        - mountPath: /redis-master-data
          name: data-redis
        - mountPath: /redis-master
          name: config-redis
      volumes:
        - name: data-redis
          persistentVolumeClaim:
            claimName: redis-claim
        - name: config-redis
          persistentVolumeClaim:
            claimName: config-claim
      nodeSelector:
        nodetype: database
