ingress-grpc-smart-web.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "smart-web"
  namespace: "default"
spec:
  ports:
    - port: 8001
  type: NodePort
  selector:
    app: "smart-web"
---
apiVersion: v1
kind: Service
metadata:
  name: "nginx"
  namespace: "default"
spec:
  ports:
    - port: 80
  type: LoadBalancer
  selector:
    app: "nginx"
---
apiVersion: v1
kind: Service
metadata:
  name: "smart-client"
  namespace: "default"
spec:
  ports:
    - port: 5000
  type: NodePort
  selector:
    app: "smart-client"
---
apiVersion: v1
kind: Service
metadata:
  name: "redis"
  namespace: "default"
spec:
  ports:
    - port: 6379
  type: NodePort
  selector:
    app: "redis"
---
apiVersion: v1
kind: Service
metadata:
  name: "smartweb-test"
  namespace: "default"
spec:
  ports:
    - port: 5436
  type: NodePort
  selector:
    app: "smartweb-test"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "general-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "nginx"
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port: 
              number: 80    
spec:
  rules:
  - host: "redis"
  - http:
      paths:
      - path: /redis
        pathType: Prefix
        backend:
          service:
            name: redis
            port: 
              number: 6379
